# fpad

./: .gitignore  CMakeLists.txt  INSTALL.freebsd  INSTALL.other  README  fp.pro  readme
featherpad/: CMakeLists.txt  config.cpp  config.h  featherpad.pro  filedialog.h  find.cc  find.cpp  fp.ui  fpwin.cc  fpwin.cpp  fpwin.h  highlighter.cpp  lineedit.cpp  lineedit.h  loading.cpp  loading.h  main.cpp  messagebox.h  pref.cc  pref.cpp  pref.h  prefDialog.ui  replace.cpp  searchbar.cc  searchbar.cpp  searchbar.h  session.cc  session.cpp  singleton.cpp  singleton.h  snippets.cc  snippets.h  syntax.cpp  tabbar.cc  tabbar.cpp  tabbar.h  tabpage.cc  tabpage.h  tabwidget.cc  tabwidget.cpp  (+7 more)
fpad/: encoding.cc  encoding.h  filedialog.h  fontDialog.cc  fontDialog.h  fp.ui  fpad.pro  fpwin.cc  loading.cc  loading.h  main.cc  messagebox.h  replace.cc  searchbar.h  session.cc  singleton.cc  singleton.h  tabbar.cc  tabbar.h  tabpage.h  textedit.cc  textedit.h  vscrollbar.h  x11.h
src/: CMakeLists.txt  config.cc  config.h  encoding.cc  filedialog.h  find.cc  fontDialog.ui  fp.ui  fpad.pro  fpwin.cc  fpwin.h  lineedit.cc  lineedit.h  main.cc  pref.cc  pref.h  prefDialog.ui  replace.cc  searchbar.cc  searchbar.h  session.cc  session.h  sessionDialog.ui  singleton.cc  singleton.h  tabbar.cc  tabbar.h  tabpage.cc  tabpage.h  tabwidget.cc  tabwidget.h  textedit.cc  textedit.h  theme.h  vscrollbar.cc  warningbar.h  x11.cc
